<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.persondetail.PersonDetailActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_userPhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:elevation="@dimen/card_elevation_4"
        android:src="@drawable/img_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintWidth_percent=".25"
        app:shapeAppearanceOverlay="@style/RoundedImageView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_user_greetings"
        android:textSize="@dimen/text_header4"
        android:layout_marginTop="@dimen/view_padding_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_userPhoto" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_userFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNamePlaceHolder"
        android:textSize="@dimen/text_header1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_greetings" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/label_userAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userNamePlaceHolder"
        android:textSize="@dimen/text_header4"
        android:layout_marginTop="@dimen/view_padding_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_userFullName" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/view_padding_24"
        android:layout_marginTop="@dimen/view_padding_16"
        app:cardCornerRadius="@dimen/view_padding_16"
        app:cardElevation="@dimen/card_elevation_2"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_userAge"
        app:layout_constraintVertical_bias="0.0"
        app:strokeColor="@android:color/transparent"
        tools:layout_editor_absoluteX="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/view_padding_12"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/view_padding_8">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_calendar" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_birthDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/userBirthDatePlaceHolder"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/view_padding_8">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_email" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_emailAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/userEmailPlaceHolder"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/view_padding_8">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_smartphone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_mobileNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/userMobileNoPlaceHolder"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/view_padding_8">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_location" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_userFullAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/userAddressPlaceHolder"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/view_padding_8">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_contact_person" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_contactPerson"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/contactPersonPlaceHolder"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/view_padding_8">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_contact_person_mobile_no" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/label_contactPersonMobileNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/contactPersonMobileNoPlaceHolder"
                    android:textSize="@dimen/text_body" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>